--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "clsx": "^2.1.1",
     "googleapis": "^148.0.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-swipeable": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -23,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-swipeable": "^4.3.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "prisma": "^6.8.2",
