--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@prisma/client": "^6.8.2",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.16.0",
     "googleapis": "^148.0.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-swipeable": "^7.0.2"
+    "react-icons": "^5.5.0",
+    "react-swipeable": "^7.0.2",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
