--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "googleapis": "^148.0.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.1",
+    "nodemailer": "^7.0.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -26,6 +27,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-swipeable": "^4.3.0",
