--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "framer-motion": "^12.16.0",
     "googleapis": "^148.0.0",
     "lucide-react": "^0.511.0",
-    "next": "15.3.1",
+    "next": "^16.0.9",
     "nodemailer": "^7.0.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -24,17 +24,28 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@eslint/eslintrc": "^3.3.3",
+    "@prisma/client": "^6.19.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^20.19.26",
     "@types/nodemailer": "^7.0.4",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/react-swipeable": "^4.3.0",
-    "eslint": "^9",
+    "clsx": "^2.1.1",
+    "eslint": "^9.39.1",
     "eslint-config-next": "15.3.1",
-    "prisma": "^6.8.2",
+    "framer-motion": "^12.23.26",
+    "googleapis": "^148.0.0",
+    "lucide-react": "^0.511.0",
+    "nodemailer": "^7.0.11",
+    "prisma": "^6.19.1",
+    "react": "^19.2.2",
+    "react-dom": "^19.2.2",
+    "react-icons": "^5.5.0",
+    "react-swipeable": "^7.0.2",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.9.3",
+    "zustand": "^5.0.9"
   }
 }
