--- a/package.json
+++ b/package.json
@@ -10,36 +10,36 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^6.8.2",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.16.0",
-    "googleapis": "^148.0.0",
-    "lucide-react": "^0.511.0",
-    "nodemailer": "^7.0.10",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "framer-motion": "^12.34.1",
+    "googleapis": "^171.4.0",
+    "lucide-react": "^0.574.0",
+    "nodemailer": "^8.0.1",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
     "react-swipeable": "^7.0.2",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
-    "@prisma/client": "^6.19.1",
+    "@prisma/client": "^6.19.2",
     "@tailwindcss/postcss": "^4.1.18",
-    "@types/node": "^20.19.26",
-    "@types/nodemailer": "^7.0.4",
-    "@types/react": "^19.2.7",
+    "@types/node": "^25.2.3",
+    "@types/nodemailer": "^7.0.10",
+    "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
-    "@types/react-swipeable": "^4.3.0",
+    "@types/react-swipeable": "^5.2.0",
+    "baseline-browser-mapping": "^2.9.19",
     "clsx": "^2.1.1",
-    "eslint": "^9.39.1",
-    "eslint-config-next": "15.3.1",
+    "eslint": "^10.0.0",
+    "eslint-config-next": "16.1.6",
     "framer-motion": "^12.23.26",
-    "googleapis": "^148.0.0",
-    "lucide-react": "^0.511.0",
-    "next": "^16.0.10",
+    "googleapis": "^171.4.0",
+    "lucide-react": "^0.574.0",
+    "next": "^16.1.6",
     "nodemailer": "^7.0.11",
-    "prisma": "^6.19.1",
+    "prisma": "^6.19.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
